c4prj2_input/grade.txt
Grading at Sat Aug  3 01:08:22 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:46:28: error: request for member ‘value’ in something not a structure or union
    *(fc->decks[i].cards[j]).value = *(deck->cards[i]).value;
                            ^
future.c:46:54: error: request for member ‘value’ in something not a structure or union
    *(fc->decks[i].cards[j]).value = *(deck->cards[i]).value;
                                                      ^
Compilation of future.c failed

Overall Grade: F
